WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55513
REGRESSION (
r79925
): Lots of plugins tests crashing in NetscapePlugin::initialize on Windows
https://bugs.webkit.org/show_bug.cgi?id=55513
Summary
REGRESSION (r79925): Lots of plugins tests crashing in NetscapePlugin::initia...
Adam Roben (:aroben)
Reported
2011-03-01 15:00:11 PST
Lots of plugins tests are crashing in NetscapePlugin::initialize on Windows. See the URL for crash logs. This seems to have started happening somewhat recently, though I'm not exactly sure when.
Attachments
Make the PLUGIN_ARCHITECTURE() macro work with MSVC
(12.71 KB, patch)
2011-03-01 15:32 PST
,
Adam Roben (:aroben)
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2011-03-01 15:00:31 PST
<
rdar://problem/9069189
>
Adam Roben (:aroben)
Comment 2
2011-03-01 15:02:52 PST
Looks like PLUGIN_ARCHITECTURE(WIN) isn't true on Windows.
Adam Roben (:aroben)
Comment 3
2011-03-01 15:32:01 PST
Created
attachment 84310
[details]
Make the PLUGIN_ARCHITECTURE() macro work with MSVC
Anders Carlsson
Comment 4
2011-03-01 15:33:37 PST
Comment on
attachment 84310
[details]
Make the PLUGIN_ARCHITECTURE() macro work with MSVC View in context:
https://bugs.webkit.org/attachment.cgi?id=84310&action=review
> Source/WebKit2/Shared/Plugins/Netscape/NetscapePluginModule.cpp:36 > +#error Unknown platform
Can this say "Unknown plug-in architecture" instead?
Adam Roben (:aroben)
Comment 5
2011-03-01 15:39:14 PST
Committed
r80051
: <
http://trac.webkit.org/changeset/80051
>
Adam Roben (:aroben)
Comment 6
2011-03-01 15:46:24 PST
Incorporated Anders's comment Committed
r80053
: <
http://trac.webkit.org/changeset/80053
>
WebKit Review Bot
Comment 7
2011-03-01 16:33:19 PST
http://trac.webkit.org/changeset/80051
might have broken Qt Linux Release The following tests are not passing: fast/canvas/canvas-strokePath-gradient-shadow.html
Balazs Kelemen
Comment 8
2011-03-02 00:58:11 PST
My fault. Thanks for the fix Adam.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug