Make the PLUGIN_ARCHITECTURE() macro work with MSVC

Fixes <http://webkit.org/b/55513> <rdar://problem/9069189> REGRESSION (r79925): Lots of
plugins tests crashing in NetscapePlugin::initialize on Windows

Reviewed by Anders Carlsson.

* Shared/Plugins/Netscape/NetscapePluginModule.cpp: Added a compile-time check to make sure
PLUGIN_ARCHITECTURE() is defined for some platform.

* config.h: Removed the parentheses from the use of "defined" in the PLUGIN_ARCHITECTURE()
macro. This matches PLATFORM(), OS(), etc., and makes the macro work on Windows. Also
replaced the nonsense OS(WIN) with OS(WINDOWS).

* win/WebKit2.vcproj: Added config.h for editing convenience. Let VS do its thang.

git-svn-id: svn://svn.chromium.org/blink/trunk@80051 bbb929c8-8fbe-4397-9dbb-9b2b20218538